[package]
name = "star-ship_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }  # Changed from "dynamic" to "dynamic_linking"
bevy-inspector-egui = "0.21"
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3